--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <!--IMPORTS-->
     <script src="/Objective-UI.js"></script>
     <script src="/App.js"></script>
-@app
+    @app
 </head>
 
 <body>
@@ -23,9 +23,10 @@
         body {
             height: 100%;
         }
+
     </style>
 
-    <main id="app" class="container-fluid bg-dark p-0">
+    <main id="app" class="container-fluid bg-dark body-min p-0">
         <!-- app will appear here -->
     </main>
 
